[fix] contact-wrapのメディアクエリをオブジェクト単位で記述する

--- a/wp-content/themes/my-portfolio/assets/styles/scss/layout/_contact-wrap.scss
+++ b/wp-content/themes/my-portfolio/assets/styles/scss/layout/_contact-wrap.scss
@@ -2,10 +2,7 @@
   max-width: 680px;
   margin: 0 auto;
   padding: 50px 20px 85px;
-}
-
-@media screen and (max-width: 500px) {
-  .l-contact-wrap {
+  @include mq-down(sm) {
     padding-bottom: 45px;
   }
 }
